maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:49: error: ';' expected but 'else' found.
    else{
    ^